--- a/index.html
+++ b/index.html
@@ -26,21 +26,48 @@
 					<h2>EventLogic</h2>
 				</div>
 				<ul class="nav-list">
-					<li class="active"><i class="icon home"></i><span>Home</span></li>
-					<li><i class="icon events"></i><span>Events</span></li>
-					<li><i class="icon speakers"></i><span>Speakers</span></li>
-					<li><i class="icon reports"></i><span>Reports</span></li>
+					<li class="active">
+						<i class="icon home"></i>
+						<i class="icon home-collapsed none"></i>
+						<span>Home</span>
+					</li>
+					<li>
+						<i class="icon events"></i>
+						<i class="icon events-collapsed none"></i>
+						<span>Events</span>
+					</li>
+					<li>
+						<i class="icon speakers"></i>
+						<i class="icon speakers-collapsed none"></i>
+						<span>Speakers</span>
+					</li>
+					<li>
+						<i class="icon reports"></i>
+						<i class="icon reports-collapsed none"></i>
+						<span>Reports</span>
+					</li>
 					<li id="notify" class="notification-item">
-						<i class="icon notifications"></i><span>Notifications</span>
+						<i class="icon notifications"></i>
+						<i class="icon notifications-collapsed none"></i>
+						<span>Notifications</span>
 						<span class="notifications-color">3</span>
 						<p class="notification-dot"></p>
 					</li>
-					<li><i class="icon messages"></i><span>Messages</span></li>
-					<li><i class="icon settings"></i><span>Settings</span></li>
-					<li id="sidebarToggle" class="sidebar-toggle">
-						<i class="icon collapse"></i><span class="col">Collapse</span>
+					<li>
+						<i class="icon messages"></i>
+						<i class="icon messages-collapsed none"></i>
+						<span>Messages</span>
 					</li>
-
+					<li>
+						<i class="icon settings"></i>
+						<i class="icon settings-collapsed none"></i>
+						<span>Settings</span>
+					</li>
+					<li id="sidebarToggle" class="sidebar-toggle">
+						<i class="icon collapse"></i>
+						<i class="icon expand-collapsed none"></i>
+						<span class="col">Collapse</span>
+					</li>
 					<li class="toggle">
 						<button id="darkModeToggle" class="dark-mode-toggle">
 							<div id="toggleButton" class="toggle-button">
@@ -49,7 +76,6 @@
 							<span>Dark Mode</span>
 						</button>
 					</li>
-
 					<li>
 						<div class="user-profile">
 							<i class="fas fa-user-circle user-icon"></i>
