--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<!-- Desktop Navigation Starts Here -->
 			<nav class="sidebar">
 				<div class="sidebar-header">
+					<img src="/assets/images/logo.svg" alt="logo" />
 					<h2>EventLogic</h2>
 				</div>
 				<ul class="nav-list">
@@ -80,8 +81,8 @@
 						<div class="user-profile">
 							<i class="fas fa-user-circle user-icon"></i>
 							<div class="user-info">
-								<span class="user-name">Opia Favour</span>
-								<span class="user-email">opiafavour10@gmail.com</span>
+								<span class="user-name">Rudra Devi</span>
+								<span class="user-email">rudra.devi@gmail.com</span>
 							</div>
 						</div>
 					</li>
@@ -342,7 +343,10 @@
 		<!-- Mobile Navigation -->
 		<nav id="mobileNav" class="mobile-nav">
 			<div class="mobile-nav-head">
-				<h1>Full Logo</h1>
+				<div class="mobile-logo">
+					<img src="/assets/images/logo.svg" alt="logo" />
+					<h2>EventLogic</h2>
+				</div>
 				<img
 					src="/assets/icon/close.svg"
 					alt="close"
