--- a/index.html
+++ b/index.html
@@ -320,9 +320,17 @@
 				<p id="modalEventDate">Event Date</p>
 				<p id="modalEventDescription">Event Description</p>
 				<div class="avatars">
-					<img src="/assets/images/avatar1.svg" alt="avatar" />
+					<img
+						src="/assets/images/avatar1.svg"
+						alt="avatar"
+						class="avatar-right"
+					/>
 					<img src="/assets/images/avatar2.svg" alt="avatar" />
-					<img src="/assets/images/avatar3.svg" alt="avatar" />
+					<img
+						src="/assets/images/avatar3.svg"
+						alt="avatar"
+						class="avatar-left"
+					/>
 				</div>
 				<div id="modalSpeakers">
 					3 Guest Speakers: Speaker name A, Speaker name B, <br />
